Specify help images’ dimensions in HTML to fix layout shift

--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -580,6 +580,7 @@ $constrained-width: 50em;
 
 .formatted-content img {
     max-width: 100%;
+    height: auto;
 }
 
 .formatted-content pre {
